<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_beige"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Title -->
        <TextView
            android:text="@string/terms_title"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/brand_orange"
            android:layout_marginBottom="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/terms_last_updated"
            android:textSize="12sp"
            android:textColor="@color/text_secondary"
            android:layout_marginBottom="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- SECTION -->
        <TextView
            android:text="@string/terms_about_title"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/terms_about_content"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!-- PROHIBITED CARD -->
        <TextView
            android:text="2. Prohibited Goods and Services"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_forbidden_red">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_prohibited_title"
                android:textStyle="bold"
                android:textColor="@color/brand_orange"
                android:textSize="16sp"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_prohibited_list"
                android:textColor="@color/brand_orange"
                android:lineSpacingExtra="6dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_violation_warning"
            android:textColor="@color/black"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            android:lineSpacingExtra="4dp"/>

        <!--3.  USER RESPONSIBILITY -->
        <TextView
            android:text="@string/terms_user_responsibility_title"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/terms_user_responsibility_list"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!-- SAFETY BLUE CARD -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4. Safety Guidelines and Trading"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_safety_blue">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_safety_title"
                android:textStyle="bold"
                android:textColor="#1E5BFF"
                android:layout_marginBottom="8dp"/>

            <!-- BOLD INTRO -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_safety_intro"
                android:textStyle="bold"
                android:textColor="#1E5BFF"
                android:layout_marginBottom="8dp"/>

            <!-- BULLET LIST -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_safety_list"
                android:textColor="#1E5BFF"
                android:lineSpacingExtra="6dp"/>
        </LinearLayout>

        <!-- orange box-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_report_orange">

            <!-- Title -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_report_title"
                android:textStyle="bold"
                android:textColor="@color/brand_orange"
                android:layout_marginBottom="8dp"/>

            <!-- Intro -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_report_intro"
                android:textColor="@color/brand_orange"
                android:layout_marginBottom="8dp"/>

            <!-- Bullet list -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_report_list"
                android:textColor="@color/brand_orange"
                android:lineSpacingExtra="6dp"/>
        </LinearLayout>





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_food_green">

            <!-- Title -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_food_title"
                android:textStyle="bold"
                android:textColor="#2E7D32"
                android:layout_marginBottom="8dp"/>

            <!-- Bold first bullet -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_food_intro"
                android:textColor="#2E7D32"
                android:textStyle="bold"
                android:layout_marginBottom="6dp"/>

            <!-- Remaining bullets -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_food_list"
                android:textColor="#2E7D32"
                android:lineSpacingExtra="6dp"/>
        </LinearLayout>
        <!-- MEDICINE AND HEALTH PRODUCTS -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_medicine_purple">

            <!-- Title -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_medicine_title"
                android:textStyle="bold"
                android:textColor="#6A1B9A"
                android:layout_marginBottom="8dp"/>

            <!-- Bold first bullet -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_medicine_intro"
                android:textColor="#6A1B9A"
                android:textStyle="bold"
                android:layout_marginBottom="6dp"/>

            <!-- Remaining bullets -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_medicine_list"
                android:textColor="#6A1B9A"
                android:lineSpacingExtra="6dp"/>
        </LinearLayout>

        <!-- SAFE MEETINGS AND TRANSACTIONS -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_safe_gray">

            <!-- Title -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_safe_meetings_title"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginBottom="8dp"/>

            <!-- Bullet list -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_safe_meetings_list"
                android:textColor="@color/black"
                android:lineSpacingExtra="6dp"/>
        </LinearLayout>



        <!-- IMPORTANT REMINDERS -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_important_red">

            <!-- Title -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms_important_reminders_title"
                android:textStyle="bold"
                android:textColor="@color/brand_orange"
                android:layout_marginBottom="8dp"/>

            <!-- Bullet list -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_important_reminders_list"
                android:textColor="@color/brand_orange"
                android:lineSpacingExtra="6dp"/>
        </LinearLayout>

        <!-- PLATFORM RESPONSIBILITY -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_platform_responsibility_title"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_platform_yellow">

            <!-- Intro -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_platform_responsibility_intro"
                android:textStyle="bold"
                android:textColor="#B26A00"
                android:layout_marginBottom="8dp"/>

            <!-- Bullet list -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_platform_responsibility_list"
                android:textColor="#B26A00"
                android:lineSpacingExtra="6dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/terms_personal_data_title"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- MODERATION AND ENFORCEMENT -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_moderation_title"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_moderation_intro"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_moderation_list"
            android:lineSpacingExtra="6dp"
            android:layout_marginBottom="16dp"/>


        <!-- PERSONAL DATA -->

        <TextView
            android:id="@+id/personalDataText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="4dp"
            android:layout_marginBottom="16dp"/>

        <!-- CONTACT -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="8. Contact"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:text="Questions about these terms can be sent to:"
            android:textSize="14sp"
            android:textColor="@color/text_secondary"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="• Philipp Zhuravlev - philippzhuravlev@gmail.com"
            android:textSize="14sp"
            android:textColor="@color/text_secondary"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="• Christian Hyllested - crillerhylle@gmail.com"
            android:textSize="14sp"
            android:textColor="@color/text_secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="16dp"
            android:background="#E0E0E0"/>

        <!-- FOOTER DISCLAIMER -->
        <TextView
            android:text="These terms have been prepared as part of a study project and are not legally binding in a commercial sense. By using the platform, you accept these terms and contribute to a safe community."
            android:textSize="12sp"
            android:textColor="@color/text_secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>
</ScrollView>
